--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
     <title>Board-walk games</title>
   </head>
   <body>
-    <h1>Board-walk</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio quos
-      perferendis assumenda vel nobis esse impedit doloribus repudiandae
-      delectus in qui reiciendis consectetur illum ipsa officiis, architecto
-      possimus eveniet a!
-    </p>
+    <h1 class="sub-heading-color">Board-walk</h1>
+    <p>paragraph</p>
   </body>
 </html>
