--- a/pages/game-library.htm
+++ b/pages/game-library.htm
@@ -40,29 +40,50 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../assets/css/styles.css" />
-    <title>Board-walk-games | game-library</title>
+    <title>Board-walk-games | Game-library</title>
   </head>
-  <body>
-    <header class="row">
-      <nav class="col-12 border">
-        <div class="logo">Navigation</div>
-      </nav>
+  <body class="d-flex flex-column min-vh-100">
+    <!-- nagivation -->
+    <div>Navigation</div>
+    <!-- header with carosel -->
+    <header class="container">
+      <div class="row">
+        <div class="col-12 col-xl-6">Game library into text section</div>
+        <div class="col-12 col-xl-6">Carosel</div>
+      </div>
     </header>
-    <main class="flex">
-      <section class="row border">
-        <div class="col-sm-12 col-md-8 border">game library intro section</div>
-        <div class="col-sm-4 col-md-4 border">carosel</div>
-        <div class="col-sm-12 border">new game section heading</div>
-        <div class="col-sm-6 col-md-6 border col-xl-4">game grid</div>
-        <div class="col-sm-6 col-md-6 border col-xl-4">game grid</div>
-        <div class="col-sm-6 col-md-6 border col-xl-4">game grid</div>
 
-        <div class="col-12">favorite game section heasding</div>
-        <div class="col-sm-6 col-md-6 col-xl-4 border">game card</div>
-        <div class="col-sm-6 col-md-6 col-xl-4 border">game card</div>
-        <div class="col-sm-6 col-md-6 col-xl-4 border">game card</div>
+    <main>
+      <section class="container">
+        <div class="row">
+          <div class="col-12">New Game section heading</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+        </div>
+      </section>
+      <section class="container">
+        <div class="row">
+          <div class="col-12">Favourite game section heading</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 col-md-6 col-xl-3">game card</div>
+        </div>
       </section>
     </main>
+    <footer class="mt-auto">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12">Contact section heading</div>
+          <div class="col-12 col-md-6 col-xl-4">
+            Contact info & social links
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
