--- a/index.html
+++ b/index.html
@@ -44,48 +44,61 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <!-- nagivation -->
-    <div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Board-walk games</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/game-library.htm"
-                  >Game library</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="assets/images/logo-sm-white.png" alt="" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/game-library.htm">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
+
     <!-- header with carosel -->
     <header class="container">
       <div class="row">
-        <div class="col-12 col-xl-6">Board walk games intro text section</div>
+        <div class="col-12 col-xl-6">
+          <h1 class="display-3">Boardwalk Games</h1>
+          <p>Your next adventure is waiting!</p>
+          <p>
+            Paragraph: Welcome to Boardwalk Games, Your Ultimate Gaming Getaway!
+            Escape into the world of board games and café delights. Whether
+            you're a casual gamer seeking a cosy nook to unwind, a board game
+            enthusiast ready for your next challenge, or a student gamer looking
+            for a fun, affordable hangout, we've got you covered.
+          </p>
+        </div>
         <div class="col-12 col-xl-6">Carosol</div>
       </div>
     </header>
@@ -93,7 +106,7 @@
     <main>
       <section class="container">
         <div class="row">
-          <div class="col-12">Services</div>
+          <div class="col-12 text-center">Services</div>
           <div class="col-12 col-md-6 col-xl-3">Section card</div>
           <div class="col-12 col-md-6 col-xl-3">Section card</div>
           <div class="col-12 col-md-6 col-xl-3">Section card</div>
@@ -105,7 +118,7 @@
     <footer class="mt-auto">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12">Contact section heading</div>
+          <div class="col-12 text-center">Contact section heading</div>
           <col-12 class="col-12 col-md-6 col-xl-4"
             >Contact info & social links</col-12
           >
