--- a/pages/game-library.htm
+++ b/pages/game-library.htm
@@ -44,48 +44,50 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <!-- nagivation -->
-    <div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Board-walk games</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="../index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./game-library.htm">Game library</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+      <div class="container">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../assets/images/logo-sm-white.png" alt="" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./game-library.htm">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
+
     <!-- header with carosel -->
     <header class="container">
       <div class="row">
@@ -97,7 +99,7 @@
     <main>
       <section class="container">
         <div class="row">
-          <div class="col-12">New Game section heading</div>
+          <div class="col-12 text-center">New Game section heading</div>
           <div class="col-12 col-md-6 col-xl-3">game card</div>
           <div class="col-12 col-md-6 col-xl-3">game card</div>
           <div class="col-12 col-md-6 col-xl-3">game card</div>
@@ -106,7 +108,7 @@
       </section>
       <section class="container">
         <div class="row">
-          <div class="col-12">Favourite game section heading</div>
+          <div class="col-12 text-center">Favourite game section heading</div>
           <div class="col-12 col-md-6 col-xl-3">game card</div>
           <div class="col-12 col-md-6 col-xl-3">game card</div>
           <div class="col-12 col-md-6 col-xl-3">game card</div>
@@ -117,7 +119,7 @@
     <footer class="mt-auto">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12">Contact section heading</div>
+          <div class="col-12 text-center">Contact section heading</div>
           <div class="col-12 col-md-6 col-xl-4">
             Contact info & social links
           </div>
