--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
     </nav>
 
     <!-- header with carosel -->
-    <header class="container">
+    <header class="container mt-2">
       <div class="row">
         <div class="col-12 col-xl-6">
-          <h1 class="display-3">Boardwalk Games</h1>
-          <p>Your next adventure is waiting!</p>
-          <p>
+          <h1 class="display-2">Boardwalk Games</h1>
+          <p class="lead display-6 sub-heading-color">
+            Your next adventure is waiting!
+          </p>
+          <p class="my-4">
             Paragraph: Welcome to Boardwalk Games, Your Ultimate Gaming Getaway!
             Escape into the world of board games and café delights. Whether
             you're a casual gamer seeking a cosy nook to unwind, a board game
@@ -99,7 +101,82 @@
             for a fun, affordable hangout, we've got you covered.
           </p>
         </div>
-        <div class="col-12 col-xl-6">Carosol</div>
+        <div class="col-12 col-xl-6">
+          <div
+            id="carouselExampleAutoplaying"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-1.webp"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-2.webp"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-3.webp"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-4.webp"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-5.webp"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/boardwalk-games-carousel-image-6.webp"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
       </div>
     </header>
 
