Add the new game section with title and content for each card

--- a/pages/game-library.htm
+++ b/pages/game-library.htm
@@ -171,11 +171,83 @@
     <main>
       <section class="container">
         <div class="row">
-          <div class="col-12 text-center">New Game section heading</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <div class="col-12 text-center">New games</div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/new-games-1.webp"
+                class="card-img-top"
+                alt="Galaxy Pioneers"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Galaxy Pioneers</h3>
+                <p class="card-text">
+                  Celebrate your child's special day with us! We offer fun,
+                  game-filled party packages that are sure to delight young
+                  gamers and their friends.
+                </p>
+                <p>Number of players: 2-4</p>
+                <p class="mb-0">Ages: 12+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/new-games-2.webp"
+                class="card-img-top"
+                alt="Galaxy Pioneers"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Mystic Woods</h3>
+                <p class="card-text">
+                  Enter the enchanted forest of Mystic Woods. Combine spells,
+                  gather mystical creatures, and solve puzzles to protect the
+                  realm.
+                </p>
+                <p>Number of players: 1-6</p>
+                <p class="mb-0">Ages: 10+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/new-games-3.webp"
+                class="card-img-top"
+                alt="Captain's Gambit board game box"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Captain's Gambit</h3>
+                <p class="card-text">
+                  Engage in battles, form fleeting alliances, and navigate
+                  treacherous waters to become the most feared pirate of them
+                  all.
+                </p>
+                <p>Number of players: 3-4</p>
+                <p class="mb-0">Ages: 14+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/new-games-4.webp"
+                class="card-img-top"
+                alt="Critter Quest board game box"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Critter Quest</h3>
+                <p class="card-text">
+                  Solve simple puzzles, collect magical gems, and help friends
+                  along the way in this heartwarming journey of discovery and
+                  friendship.
+                </p>
+                <p>Number of players: 2-4</p>
+                <p class="mb-0">Ages: 5+</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="container">
