Add custom styles for the game-library page

--- a/pages/game-library.htm
+++ b/pages/game-library.htm
@@ -171,7 +171,7 @@
     <main>
       <section class="container">
         <div class="row">
-          <div class="col-12 text-center">New games</div>
+          <h3 class="col-12 text-center mt-5 mb-2 display-6">New games</h3>
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card">
               <img
@@ -186,8 +186,8 @@
                   game-filled party packages that are sure to delight young
                   gamers and their friends.
                 </p>
-                <p>Number of players: 2-4</p>
-                <p class="mb-0">Ages: 12+</p>
+                <p><em>Number of players: 2-4</em></p>
+                <p class="mb-0"><em>Ages: 12+</em></p>
               </div>
             </div>
           </div>
