--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <section class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h2 class="display-6">Services</h2>
+            <h2 class="display-6 mt-5">Services</h2>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card">
