--- a/pages/game-library.htm
+++ b/pages/game-library.htm
@@ -252,11 +252,86 @@
       </section>
       <section class="container">
         <div class="row">
-          <div class="col-12 text-center">Favourite game section heading</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
-          <div class="col-12 col-md-6 col-xl-3">game card</div>
+          <h3 class="col-12 text-center mt-5 mb-2 display-6">Favourites</h3>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/fav-games-1.webp"
+                class="card-img-top"
+                alt="Settlers of Catan board game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Settlers of Catan</h3>
+                <p class="card-text">
+                  Picture yourself in the era of discoveries: after a long
+                  voyage of great deprivation, your ships have finally reached
+                  the coast of an uncharted island.
+                </p>
+                <p><em>Number of players: 3-4</em></p>
+                <p class="mb-0"><em>Ages: 10+</em></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/fav-games-2.webp"
+                class="card-img-top"
+                alt="Galaxy Pioneers"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">
+                  Monopoly board game
+                </h3>
+                <p class="card-text">
+                  Featuring classic Monopoly gameplay, this favourite family
+                  board game is all about buying, selling, and trading
+                  properties to win.
+                </p>
+                <p>Number of players: 2-6</p>
+                <p class="mb-0">Ages: 8+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/fav-games-3.webp"
+                class="card-img-top"
+                alt="Exploding Kittens card game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Exploding Kittens</h3>
+                <p class="card-text">
+                  Exploding Kittens is a kitty-powered version of Russian
+                  Roulette. Players take turns drawing cards until someone draws
+                  an exploding kitten card and loses the game!
+                </p>
+                <p>Number of players: 2-5</p>
+                <p class="mb-0">Ages: 7+</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
+              <img
+                src="../assets/images/fav-games-4.webp"
+                class="card-img-top"
+                alt="Cluedo board game"
+              />
+              <div class="card-body">
+                <h3 class="card-title sub-heading-color">Cluedo</h3>
+                <p class="card-text">
+                  The classic game of mystery and suspense. Cluedo has 6
+                  suspects, 6 weapons and also a whole maze of possible murder
+                  scenes to explore. It's up to you to question the suspects and
+                  crack the case.
+                </p>
+                <p>Number of players: 2-6</p>
+                <p class="mb-0">Ages: 8+</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
