include and style contact section

--- a/pages/game-library.htm
+++ b/pages/game-library.htm
@@ -78,10 +78,10 @@
               <a class="nav-link" href="./game-library.htm">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="../index.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="../index.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -335,14 +335,88 @@
         </div>
       </section>
     </main>
-    <footer class="mt-auto">
-      <div class="container">
+    <footer class="mt-auto" id="contact">
+      <div class="container section">
         <div class="row justify-content-center">
-          <div class="col-12 text-center">Contact section heading</div>
-          <div class="col-12 col-md-6 col-xl-4">
-            Contact info & social links
+          <div class="col-12 text-center">
+            <h2 class="display-6" id="contact">Contact us!</h2>
           </div>
-          <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+          <div class="col-12 col-md-6">
+            <h3 class="sub-heading-color">Contact info</h3>
+            <address>
+              <strong
+                ><i class="fa-solid fa-location-dot"></i> Boardwalk Games
+              </strong>
+              <br />
+              123 Boardwalk Avenue
+              <br />
+              12345 Boardwalk City
+              <br />
+              <p></p>
+              <p>
+                <i class="fa-solid fa-phone"></i> 1234 6789 90 <br />
+                <i class="fa-regular fa-paper-plane"></i> info@boardwalk.com
+              </p>
+            </address>
+          </div>
+          <div class="col-12 col-md-6 sub-heading-color">
+            <h3 class="card-title sub-heading-color">Opening times</h3>
+            <table class="table caption-top table-hover" id="opening-times">
+              <thead>
+                <tr>
+                  <th scope="col">Day</th>
+                  <th scope="col">Open</th>
+                  <th scope="col">Close</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Monday</td>
+                  <td>Closed</td>
+                </tr>
+                <tr>
+                  <td>Tuesday - Thursday</td>
+                  <td>11am</td>
+                  <td>11pm</td>
+                </tr>
+                <tr>
+                  <td>Friday - Saturday</td>
+                  <td>12am</td>
+                  <td>12pm</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td>12pm</td>
+                  <td>7pm</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4"></div>
+        </div>
+        <p class="sub-heading-color">Follow us on social media</p>
+        <div class="social-icons">
+          <a
+            href="https://wwww.facebook.com"
+            target="_blank"
+            aria-label="Facebook (opens in a new tab)"
+            rel="noopener"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://wwww.instagram.com"
+            target="_blank"
+            aria-label="Instagram (opens in a new tab)"
+            rel="noopener"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.twitter.com"
+            target="_blank"
+            aria-label="Twitter (opens in a new tab)"
+            rel="noopener"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
         </div>
       </div>
     </footer>
